Pagepen | Fix webpage layout issues due to extension styles.
This commit fixes the layout issues observed on the webpage due to extension stylesheets. The following are the updates summarized below:
1. Remove unnecessary css styles.
2. Assign the popup styles using css classes and remove broad styling selectors such as the body element as it affects the page layout as well.

--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,3 @@
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
 :root {
     /* Colors for highlighting. */
     --color-yellow: #fee440;
@@ -15,12 +7,6 @@
 }
 
 /* Text manipulation styles */
-
-/* text-decoration: underline;
-    text-decoration-color: #d97706;
-    text-decoration-thickness: 2px;
-    padding: 2px; */
-
 .highlight-orange {
     background-color: var(--color-orange);
 }
