--- a/src/ui/components/Popup/index.css
+++ b/src/ui/components/Popup/index.css
@@ -1,12 +1,4 @@
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
-body {
+.popup {
     box-sizing: border-box;
     padding: 20px;
 }
